perf: remove bpf examples
Message-id: <f2e1d39854d7d06cf9937de75a127d0e9b4ded99.1558604935.git.mpetlan@redhat.com>
Patchwork-id: 259900
O-Subject: [RHEL8.1 BZ1709242 189/190] [rpmspec] perf: remove bpf examples
Bugzilla: 1709242
RH-Acked-by: Jiri Olsa <jolsa@redhat.com>
RH-Acked-by: Tony Camuso <tcamuso@redhat.com>
RH-Acked-by: Jarod Wilson <jarod@redhat.com>

Bugzilla: 1709242
https://bugzilla.redhat.com/show_bug.cgi?id=1709242
Upstream Status: RHEL only

description
===========
The following files should not be packaged, since they are packaged
in fedora neither:

   /usr/lib/perf/examples/bpf/5sec.c
   /usr/lib/perf/examples/bpf/augmented_syscalls.c
   /usr/lib/perf/examples/bpf/empty.c
   /usr/lib/perf/examples/bpf/hello.c
   /usr/lib/perf/examples/bpf/sys_enter_openat.c
   /usr/lib/perf/include/bpf/bpf.h
   /usr/lib/perf/include/bpf/stdio.h

Signed-off-by: Herton R. Krzesinski <herton@redhat.com>

--- a/redhat/kernel.spec.template
+++ b/redhat/kernel.spec.template
@@ -1748,6 +1748,10 @@ rm -rf %{buildroot}/usr/lib/examples/perf
 # remove the stray header file that somehow got packaged in examples
 rm -rf %{buildroot}/usr/lib/include/perf/bpf/bpf.h
 
+# remove perf-bpf examples
+rm -rf %{buildroot}/usr/lib/perf/examples
+rm -rf %{buildroot}/usr/lib/perf/include
+
 # python-perf extension
 %{perf_make} DESTDIR=$RPM_BUILD_ROOT install-python_ext
 
